manifests/apprise/storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apprise
