manifests/apprise/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apprise
  namespace: apprise
spec:
  type: ClusterIP
  selector:
    app: apprise
  ports:
    - name: http
      port: 8000
      targetPort: 8000
