manifests/apprise/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apprise
  namespace: apprise
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx-private
  tls:
    - hosts:
        - apprise.techtronics.top
  rules:
    - host: apprise.techtronics.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apprise
                port:
                  number: 8000
